--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hang-Man</title>
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>Hang Man</h1>
-    <p> Find the hidden word - Enter a letter</p>
+    <p> Find the hidden character from HarryPotter - Enter a letter</p>
     <div class="game-container">
         <div class="figure-container">
             <svg height="250" width="200" class="figure">
